--- a/views/admin/cadastro/funcionario.njk
+++ b/views/admin/cadastro/funcionario.njk
@@ -137,9 +137,7 @@
                     <div class="input-wrapper">
                         <label for="cargo">Cargo</label>
                         <select name="cargo" id="cargo">
-                            <option value="Atendente">Atendente</option>
-                            <option value="Gerente">Gerente</option>
-                            
+                            <option value="funcionario">Funcionario</option>
                         </select>
                     </div>
 
