--- a/views/admin/gerenciamento/instrutores/edit.njk
+++ b/views/admin/gerenciamento/instrutores/edit.njk
@@ -94,7 +94,7 @@
 
             <div class="form-field">
                 <label for="dataNascimento">Data de nascimento</label>
-                <input type="text" class="form-control" id="dataNascimento" name="dataNascimento" value="{{InstrutoresAcademia.dataNascimento}}" placeholder="data de nascimento" required>
+                <input type="date" class="form-control" id="dataNascimento" name="dataNascimento" value="{{dataNascimento}}" placeholder="data de nascimento" required>
             </div>
 
             <div class="form-field">
