--- a/views/admin/relatorio/financeiro/saidas.njk
+++ b/views/admin/relatorio/financeiro/saidas.njk
@@ -5,47 +5,571 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatorio Financeiro</title>
-    
     <link rel="stylesheet" href="/styles/relatorioModel.css">
+    {# <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> #}
+   <style>
+
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+  }
+  ul{
+    margin: 0;
+    padding: 0;
+  }
+  /*
+    3. Allow percentage-based heights in the application
+  */
+  html, body {
+    height: 100%;
+    padding: 10px;
+  }
+  /*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    6. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    7. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    8. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
+
+
+
+
+
+        .title{
+            text-align: center;
+            
+        }
+
+        .finance-table{
+            padding: 10px 0;
+        }
+        .finance-head{
+        
+            
+        }
+        .finance-table .finance-head ul{
+            display: grid;
+
+            grid-template-columns:  25% 25% 25% 25%;
+
+            width: 100%;
+            background-color: #dc3545;
+
+            color: white;
+            border-top-left-radius: 5px ;
+            border-top-right-radius: 5px;
+
+        }
+       
+        .finance-head ul li{
+            list-style: none;
+
+            list-style: none;
+
+            font-weight: bold;
+
+            font-size: 1.25em;
+            padding: 10px;
+
+
+        }
+
+            .finance-bottom ul li{
+                list-style: none;
+
+                list-style: none;
+
+                font-weight: bold;
+
+                font-size: 1.25em;
+            padding: 10px;
+
+            }
+         
+             .finance-bottom ul{
+            display: grid;
+
+            grid-template-columns:  25% 25% 25% 25%;
+
+            width: 100%;
+            background-color: #dc3545;
+
+            color: white;
+            border-bottom-left-radius: 5px ;
+            border-bottom-right-radius: 5px;
+
+        }
+       
+
+        .finance-rows .row ul li{
+            list-style: none;
+            
+            font-size: 1.125em;
+            
+            padding: 10px;
+            border: 1px solid black;
+            
+        }
+
+        .finance-rows .row ul li .icon{
+            font-size: 1.5em;
+        }
+
+        .row ul {
+        display: grid;
+        grid-template-columns:  25% 25% 25% 25%;
+        width: 100%;
+        background-color: white;
+        color: black;
+    }
    
+    h2, h3{
+        padding-top: 30px;
+    }
+    .apenas-grafico .row{
+        display: none;
+    }
+    
+    .apenas-grafico .grafico-primeiro{
+        min-height: 950px;
+    }
+    .apenas-grafico .grafico-primeiro.n{
+        min-height: 400px;
+    }
+    
+    .tabela-grafico .grafico-primeiro{
+        min-height: 600px;
+    
+    
+    }
+    .tabela-grafico .grafico-primeiro.n{
+        min-height: 700px;
+    }
+    .tabela-grafico .grafico-primeiro.nDois{
+        min-height: 900px;
+    }
+    .tabela-grafico h2, h3{
+    
+        padding: 15px 0;
+    }
+
+    
+   </style>
 </head>
 <body>
     
-    <h1>Relatorio financeiro Saidas</h1>
+    <h1 class="title">Relatorio Financeiro</h1>
+    
 
-    <div class="finance-table">
+        {# TABELA #}
 
-            <div class="finance-head">
-                     <ul>
-                        <li>Descrição <div class="filter-desc"></div></li>
-                        <li>Valor<div class="filter-valor"></div></li>
-                        <li>data <div class="filter-data"></div></li>
-                        <li>Tipo <div class="filter-tipo"></div></li>
-                        <li></li>
-                </ul>
-            </div>
+        {% if estilo == 'tabela' %}
+            {% if boletoMeses.length > 1 %}
+                {% set ultimoMes = boletoMeses.length - 1 %}
+                <h2 >Saidas Entre o mês de {{boletoMeses[0].mes}} e {{boletoMeses[ultimoMes].mes}} de 2023 </h2>
+                {%else%}
+                 <h2 >Saidas no mês de {{boletoMeses[0].mes}} de 2023 </h2>
+            {% endif %}
 
-                <div class="finance-rows">
-                    
-                         <div class="row">
+                
+            <div class="finance-table">
+
+                    <div class="finance-head">
                             <ul>
-                                <li>Salario</li>
-                                <li><span class="cifrao">R$</span> 4000</li>
-                                <li>02/01/2023</li>
-                                
-                                
-                                    <li><ion-icon class="icon saida md hydrated" name="arrow-down-circle-outline" role="img" aria-label="arrow down circle outline"></ion-icon></li>
-                                    
-                                
-                            </ul>
+                                <li>Mês <div class="filter-desc"></div></li>
+                                {# <li>Tipo<div class="filter-valor"></div></li> #}
+                                <li>Quantidade <div class="filter-data"></div></li>
+                                <li>Valor Medio <div class="filter-tipo"></div></li>
+                                <li>Total</li>
+                        </ul>
+                    </div>
+
+
+                        <div class="finance-rows">
+                            {% set qtd = 0 %}
+                            {% set total = 0 %}
+                            {% set valor = 0 %}
+                            {% set meses = 0 %}
+
+                            {% for boleto in boletoMeses %}
+                            <div class="row">
+                                <ul>
+                                    <li>{{boleto.mes}}</li>
+                                    {# <li>{{boleto.tipo}}</li> #}
+                                    <li>{{boleto.quantidade}}</li>
+                                    <li>R$ {{boleto.valor}}</li>
+                                    <li>R$ {{boleto.valorTotal}}</li>
+                                </ul>
+                            </div>
+                            {% set qtd = qtd + boleto.quantidade %}
+                            {% set total = total + boleto.valorTotal%}
+                            {% set valor = valor + boleto.valor %}
+                            {% set meses = meses + 1 %}
+                            {% endfor %}
                         </div>
 
+                        <div class="finance-bottom">
+                        <ul>
+                            {# <li>Em {{meses}} meses<div class="filter-desc"></div></li> #}
+                            <li><div class="filter-desc"></div></li>
+                            {# <li>{{boletoMeses[0].tipo}}<div class="filter-valor"></div></li> #}
+                            {# <li><div class="filter-valor"></div></li> #}
+                            <li>{{qtd}} <div class="filter-data"></div></li>
+                            {# <li>R$ {{valorMedio}}<div class="filter-tipo"></div></li> #}
+                            <li>R$ {{valorMedio}}<div class="filter-tipo"></div></li>
+                            <li>R$ {{total}}</li>
+                    </ul>
+            </div>
+                
+        {% endif %}
 
-                    
-                   
-                    
-                </div>
-    </div>
+
+
+        {# GRAFICO #}
+        {% if estilo == 'grafico' %}
+            <div class="apenas-grafico">
+                    {% if boletoMeses.length > 1 %}
+                        
+                        {% set ultimoMes = boletoMeses.length - 1 %}
+                        <h2>Grafico de Saidas Entre o mês de {{boletoMeses[0].mes}} e {{boletoMeses[ultimoMes].mes}} de 2023 </h2>
+                    {% endif %}
+
+                    {% for boleto in boletoMeses %}
+                            <div class="row">
+                                <ul>
+                                    <li class="mes">{{boleto.mes}}</li>
+                                    <li>{{boleto.tipo}}</li>
+                                    <li class="quantidade">{{boleto.quantidade}}</li>
+                                    <li>R$ {{boleto.valor}}</li>
+                                    <li>R$ <span class="valorTotal">{{boleto.valorTotal}}</span></li>
+                                </ul>
+                            </div>
+                    {% endfor %}    
         
+                    <div class="grafico-primeiro {%if boletoMeses.length == 1 %}n{%endif%} ">
+
+                    <h3>Grafico por quantidade</h3>
+                        <div>
+                            <canvas id="graficoQuantidade"></canvas>
+                            
+                        </div>
+                    </div>
+                    
+                    
+                    <div class="grafico-segundo">
+
+                        <h3>Grafico por Valor R$</h3>
+                            <div>
+                                <canvas id="graficoValor"></canvas>
+                            </div>
+                    </div>
+
+            </div>
+        {% endif %}
+
+        {# Tabela e grafico #}
+
+        {% if estilo == 'tabelagrafico' %}
+            <div class="tabela-grafico">
+                {% if boletoMeses.length > 1 %}
+                    {% set ultimoMes = boletoMeses.length - 1 %}
+                    <h2 >Saidas Entre o mês de {{boletoMeses[0].mes}} e {{boletoMeses[ultimoMes].mes}} </h2>
+                    {%else%}
+                    <h2 >Saidas no o mês de {{boletoMeses[0].mes}} </h2>
+                {% endif %}
+
+                <div class="finance-table">
+
+                <div class="finance-head">
+                        <ul>
+                            <li>Mês <div class="filter-desc"></div></li>
+                            {# <li>Tipo<div class="filter-valor"></div></li> #}
+                            <li>Quantidade <div class="filter-data"></div></li>
+                            <li>Valor Medio <div class="filter-tipo"></div></li>
+                            <li>Total</li>
+                    </ul>
+                </div>
+
+
+                    <div class="finance-rows">
+                        {% set qtd = 0 %}
+                        {% set total = 0 %}
+                        {% set valor = 0 %}
+                        {% set meses = 0 %}
+
+                        {% for boleto in boletoMeses %}
+                        <div class="row">
+                            <ul>
+                                <li class="mes">{{boleto.mes}}</li>
+                                {# <li>{{boleto.tipo}}</li> #}
+                                <li class="quantidade">{{boleto.quantidade}}</li>
+                                <li>R$ {{boleto.valor}}</li>
+                                <li>R$ <span class="valorTotal">{{boleto.valorTotal}}</span></li>
+                            </ul>
+                        </div>
+                        {% set qtd = qtd + boleto.quantidade %}
+                        {% set total = total + boleto.valorTotal%}
+                        {% set meses = meses + 1 %}
+                        {% endfor %}
+                    </div>
+                    <div class="finance-bottom">
+                        <ul>
+                            {# <li>Em {{meses}} meses<div class="filter-desc"></div></li> #}
+                            <li><div class="filter-desc"></div></li>
+                            {# <li>{{boletoMeses[0].tipo}}<div class="filter-valor"></div></li> #}
+                            {# <li><div class="filter-valor"></div></li> #}
+                            <li>{{qtd}} <div class="filter-data"></div></li>
+                            {# <li>R$ {{valorMedio}}<div class="filter-tipo"></div></li> #}
+                            <li>R$ {{valorMedio}}<div class="filter-tipo"></div></li>
+                            <li>R$ {{total}}</li>
+                    </ul>
+                </div>
+
+
+
+                <div class="grafico-primeiro {%if boletoMeses.length > 1 %} n {%endif%} {%if boletoMeses.length == 1 %} nDois{%endif%}">
+                    
+                    {% if boletoMeses.length > 1 %}
+                        <h2>Grafico de Saidas Entre o mês de {{boletoMeses[0].mes}} e     {{boletoMeses[ultimoMes].mes}} </h2>
+                        {%else%}
+                        <h2>Grafico de Saidas no mês de {{boletoMeses[0].mes}}  </h2>
+                    {%endif%}
+                    <h3>Grafico por quantidade</h3>
+                        <div>
+                            <canvas id="graficoQuantidade"></canvas>
+                            
+                        </div>
+                </div>
+                
+                
+                <div class="grafico-segundo">
+
+                    <h3>Grafico por Valor R$</h3>
+                        <div>
+                            <canvas id="graficoValor"></canvas>
+                        </div>
+                </div>
+            </div>
+        {% endif %}
+    
+          
+
+          
+<script src="
+https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js
+"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js" integrity="sha512-JPcRR8yFa8mmCsfrw4TNte1ZvF1e3+1SdGMslZvmrzDYxS69J7J49vkFL8u6u8PlPJK+H3voElBtUCzaXj+6ig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+    const graficoQuantidade = document.getElementById('graficoQuantidade');
+    const graficoValor = document.getElementById('graficoValor');
+    let meses = document.querySelectorAll('.mes')
+    let quantidade = document.querySelectorAll('.quantidade')
+    let valor = document.querySelectorAll('.valorTotal')
+    
+    let mesesArray = []
+    for(let i of meses){
+       mesesArray.push(i.textContent) 
+    }
+    let quantidadeArray = []
+     for(let i of quantidade){
+       quantidadeArray.push(Number(i.textContent)) 
+    }
+    let valorArray = []
+    for(let i of valor){
+       valorArray.push(Number(i.textContent)) 
+    }
+
+    console.log(quantidadeArray)
+
+     new Chart(graficoQuantidade, {
+      type: 'bar',
+      data: {
+        labels: mesesArray,
+        datasets: [{
+          label: 'Saidas por Quantidade',
+          data: quantidadeArray,
+          backgroundColor: [
+            'rgba(255, 0, 0, 0.8)',
+            'rgba(0, 141, 255, 0.8)',
+            'rgba(205, 255, 0, 0.8)',
+            'rgba(0, 255, 40, 0.8)',
+            'rgba(120, 0, 255, 0.8)'
+          ],
+          borderWidth: 3,
+        }],
+        
+      },
+      plugins: [ChartDataLabels],
+        options: {
+            plugins: {
+                datalabels: {
+                    color: 'black',
+                    anchor: 'end',
+                    align: 'end',
+                    font: {
+                        size: 18,
+                        weight: 'bold'
+                    },
+                },
+                legend: {
+                    display: false // Desabilita a exibição da legenda
+                },
+                title: {
+                    display: true,
+                    padding: {
+                        bottom: 50 // Espaçamento inferior do título
+                    },
+                    text: 'Saidas Mensais por quantidade',
+                    color: 'black', // Define a cor do título como azul
+                    font: {
+                        size: 20
+                        }
+                }   
+            },
+        // indexAxis: 'y', // Definindo o eixo x como o eixo horizontal
+        scales: {
+            x: {
+                beginAtZero: true,
+                ticks: {
+                        font: {
+                            family: 'Arial',
+                            size: 20,
+                            weight: 'bold'
+                        }
+                }
+            },
+          /* y: {
+            beginAtZero: true
+          } */
+        },
+        responsive: true,
+           datasets: {
+            bar: {
+                barThickness: 70 // Ajuste o valor para alterar a largura das barras
+            }
+        }
+      }
+    });
+
+
+ new Chart(graficoValor, {
+      type: 'bar',
+      data: {
+        labels: mesesArray,
+        datasets: [{
+          label: 'Saidas por Valor R$',
+          data: valorArray,
+          backgroundColor: [
+            'rgba(255, 0, 0, 0.8)',
+            'rgba(0, 141, 255, 0.8)',
+            'rgba(205, 255, 0, 0.8)',
+            'rgba(0, 255, 40, 0.8)',
+            'rgba(120, 0, 255, 0.8)'
+          ],
+          borderWidth: 3
+        }]
+      },
+        plugins: [ChartDataLabels],
+        options: {
+            plugins: {
+                datalabels: {
+                    color: 'black',
+                    anchor: 'end',
+                    align: 'end',
+                    font: {
+                        size: 18,
+                        weight: 'bold'
+                    },
+                },
+            legend: {
+                display: false // Desabilita a exibição da legenda
+            },
+            title: {
+                display: true,
+                padding: {
+                        bottom: 50 // Espaçamento inferior do título
+                    },
+                text: 'Saidas Mensais por valor R$',
+                color: 'black', // Define a cor do título como azul
+                font: {
+                    size: 20
+                }
+            }
+            },
+      
+       // indexAxis: 'y', // Definindo o eixo x como o eixo horizontal
+        scales: {
+          x: {
+            beginAtZero: true,
+            ticks: {
+                    font: {
+                        family: 'Arial',
+                        size: 18,
+                    }
+                }
+          },
+          y: {
+            beginAtZero: true,
+            ticks: {
+                    font: {
+                        family: 'Arial',
+                        size: 20,
+                        weight: 'bold'
+                    }
+                }
+          }
+        },
+        responsive: true,
+           datasets: {
+            bar: {
+                barThickness: 50 // Ajuste o valor para alterar a largura das barras
+            }
+        }
+      }
+    });
+
+
+
+</script>
 </body>
 </html>
